set up server side request

--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Weather Forecast App</title>
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
+    <nav>
+      <h1>Five Day Weather Forecast</h1>
+    </nav>
+    <main>
+      <h2>Weather for Ipswich, MA</h2>
+      <section>
 
+      </section>
+    </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
