--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
       </section>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./client/main.js"></script>
   </body>
 </html>
